--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="google-site-verification" content="assets/googleb85e45ef6931717a.html" />
+    <meta name="google-site-verification" content="qEEs2TvS44XPIxY2vKRvtHfd3Gp7VCFuBCMRvSzSn0g"/>
     <meta name="author" content="ylavine" />
     <title>Breana's Perfect Polish</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.jpg" />
