--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="col-lg-4">
                     <div class="box" data-aos="zoom-in" data-aos-delay="100">
                         <span>Basic Cleanings</span>
-                        <h4>100$</h4>
+                        <h4>100$ (always customizable)</h4>
                         <p>High Low Dusting <br>
                             Light switches <br>
                             Full Floors: Sweep, Vacuum & Mop <br>
@@ -81,29 +81,37 @@
                 <div class="col-lg-4 mt-4 mt-lg-0">
                     <div class="box" data-aos="zoom-in" data-aos-delay="200">
                         <span>Deep Cleans</span><br>
-                        <h4> Totaling an estimate of : 350$ - 2 days of work </h4>
+                        <h4> Totaling an estimate of : 500$ - 2 days of work (always customizable)</h4>
                         <h5>For a: [2baths (2showers), 4bed rooms] <br> </h5>
                         <p>Bathrooms:
-                            (sinks, toilets, vanity, showers/tubs, mirrors, dusting) <br>
+                            toilets, vanity, showers/tubs (2), mirrors, window, cabinets <br>
                             All floors:
                             (vacuumed, swept, mopped) <br>
                             All rooms:
                             Dusting (high /low),
+                            Light switches,
+                            Door knobs,
                             Windows inside,
+                            Window sills,
                             Window frames wipe down,
                             Base boards wiped down,
-                            Kitchen wiped down appliances,
-                            Stainless steel,
+                            Polish any wood tables,
+                            Vacuum couches <br>
+                        
+                            Kitchen:
+                            Kitchen wiped down with appliances and Stainless steel,
                             Cabinets wiped down,
-                            Vacuum couches,
-                            Polish any leather</p>
+                            Kitchen window and window sill,
+                            Inside & outside microwave,
+                            Inside & outside fridge,
+                            Inside & outside stove/oven</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 mt-4 mt-lg-0">
                     <div class="box" data-aos="zoom-in" data-aos-delay="300">
                         <span>Any Extra Cleaning Service</span>
-                        <h4> 50$</h4>
+                        <h4> 50$ (always customizable)</h4>
                         <p>Shower, Tub
                             Base Boards <br>
                             Kitchen Wipe Down (Cabinets, Counters, Stainless Steel & Appliances) <br>
