--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="google-site-verification" content="qEEs2TvS44XPIxY2vKRvtHfd3Gp7VCFuBCMRvSzSn0g"/>
-    <meta name="author" content="ylavine" />
-    <title>Breana's Perfect Polish</title>
+    <meta name="description" content="Breana’s Perfect Polish LLC., only uses the best all natural cleaning products. 
+    Get the first best cleaning service of your life. 
+    Clean products, great people and excellent service in the northeast. Let’s talk!
+    Rochester, Sommersworth, Dover, Portsmouth" />
+    <title>Breana's Perfect Polish - Commercial and Residential Cleaning</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.jpg" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
