updated meta tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Breana’s Perfect Polish LLC., only uses the best all natural cleaning products. 
     Get the first best cleaning service of your life. 
     Clean products, great people and excellent service in the northeast. Let’s talk!
+    All-Natural. Commercial & Residential Cleaning
+    Low Quotes With High Quality Cleaning
     Rochester, Sommersworth, Dover, Portsmouth" />
     <title>Breana's Perfect Polish - Commercial and Residential Cleaning</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.jpg" />
