added font awesome icons in contacts

--- a/index.html
+++ b/index.html
@@ -216,8 +216,10 @@
                             <span class="section-heading-upper">Contact me today </span>
                             <span class="section-heading-lower">to schedule your first appointment!</span>
                         </h2>
-                        <i class="fa-solid fa-phone"></i> (603) 948-6004 <br>
-                        <i class="fa-solid fa-envelope"></i> breanakniphfer@gmail.com <br>
+                        <i class="fa-solid fa-phone"></i><a href="tel:(603) 948-6004"> (603) 948-6004 </a><br>
+                        <i class="fa-solid fa-envelope"></i> <a href = "mailto: breanakniphfer@gmail.com">breanakniphfer@gmail.com </a><br>
+                        <i class="fab fa-facebook"></i> <a href="https://www.facebook.com/perfectpolishbybre/"> @perfectpolishbybre </a><br>
+                        <i class="fab fa-instagram"></i> <a href="https://www.instagram.com/breanas_perfectpolish/"> @breanas_perfectpolish </a><br>
                     </div>
                 </div>
             </div>
@@ -225,7 +227,7 @@
     </section>
     <footer class="footer text-faded text-center py-5">
         <div class="container">
-            <p class="m-0 small">Breana’s Perfect Polish LLC. 2022</p>
+            <p class="m-0 small">Breana’s Perfect Polish LLC. 2021</p>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
