added meta keywords

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="google-site-verification" content="qEEs2TvS44XPIxY2vKRvtHfd3Gp7VCFuBCMRvSzSn0g"/>
     <meta name="description" content="Breana’s Perfect Polish LLC., only uses the best all natural cleaning products. 
-    Get the first best cleaning service of your life. 
-    All-Natural. Commercial & Residential Cleaning
-    Low Quotes With High Quality Cleaning
-    Rochester, Sommersworth, Dover, Portsmouth" />
+    Get the first best cleaning service of your life. All-Natural. Commercial & Residential Cleaning
+    Low Quotes With High Quality Cleaning" />
+    <meta name="keywords" content="All-Natural, Commercial Cleaning, Residential Cleaning, High Quality Cleaning, Rochester, Sommersworth, Dover, Portsmouth
+    Maine, New Hamsphire">
     <title>Breana's Perfect Polish - Commercial and Residential Cleaning</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.jpg" />
     <!-- Font Awesome icons (free version)-->
