--- a/index.html
+++ b/index.html
@@ -202,6 +202,30 @@
                     </div>
                 </div>
 
+                <div class="col-md-auto">
+                    <div class="gallery-item">
+                        <a href="assets/testimonials/unnamed (7).jpg" class="gallery-lightbox" data-gall="gallery-item">
+                            <img src="assets/testimonials/unnamed (6).jpg" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-md-auto">
+                    <div class="gallery-item">
+                        <a href="assets/testimonials/unnamed.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                            <img src="assets/testimonials/unnamed (8).jpg" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-md-auto">
+                    <div class="gallery-item">
+                        <a href="assets/testimonials/unnamed.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                            <img src="assets/testimonials/unnamed (9).jpg" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+
                 </div>
             </div>
         </div>
