--- a/index.html
+++ b/index.html
@@ -205,14 +205,14 @@
                 <div class="col-md-auto">
                     <div class="gallery-item">
                         <a href="assets/testimonials/unnamed (7).jpg" class="gallery-lightbox" data-gall="gallery-item">
-                            <img src="assets/testimonials/unnamed (6).jpg" alt="" class="img-fluid">
+                            <img src="assets/testimonials/unnamed (7).jpg" alt="" class="img-fluid">
                         </a>
                     </div>
                 </div>
 
                 <div class="col-md-auto">
                     <div class="gallery-item">
-                        <a href="assets/testimonials/unnamed.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                        <a href="assets/testimonials/unnamed (9).jpg" class="gallery-lightbox" data-gall="gallery-item">
                             <img src="assets/testimonials/unnamed (8).jpg" alt="" class="img-fluid">
                         </a>
                     </div>
@@ -220,7 +220,7 @@
 
                 <div class="col-md-auto">
                     <div class="gallery-item">
-                        <a href="assets/testimonials/unnamed.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                        <a href="assets/testimonials/unnamed (9).jpg" class="gallery-lightbox" data-gall="gallery-item">
                             <img src="assets/testimonials/unnamed (9).jpg" alt="" class="img-fluid">
                         </a>
                     </div>
