added dev contact info

--- a/index.html
+++ b/index.html
@@ -251,7 +251,9 @@
     </section>
     <footer class="footer text-faded text-center py-5">
         <div class="container">
-            <p class="m-0 small">Breana’s Perfect Polish LLC. 2021</p>
+            <p class="m-0 small">Breana’s Perfect Polish LLC. 2021</p><br><br>
+            <p class="m-0 small">Designed by Yulia Lavine <i class="fa-solid fa-envelope"></i> <a href = "mailto: yulia.laviner@gmail.com"> yulia.lavine@gmail.com </a> </p>
+            <p class="m-0 small">Need a website? <i class="fa-brands fa-github"></i> <a href = "https://github.com/ilavine"> ilavine </a> </p>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
